@@ -1,6 +1,13 @@
 4.1.1 - ie refresh in progress
 
-* updating NSIS
+* make_test_dir.pl updated - creates fake music files in fake album directories
+* added cool progress bar.
+* code cleanups
+
+* updating NSIS - probally quite broken on stuff like:
+  ENV path,
+  registry entry to ad namefix.pl to right click.
+
 * adding right click Apply Preview to hlist
 * update about dialog to refer to github: https://github.com/jacob-jarick/namefix
 * created make_test_dir.pl for generating files I can test with.
